add blog_detail and checkme

--- a/MusicSchool/_static/src/blog_details.html
+++ b/MusicSchool/_static/src/blog_details.html
@@ -129,10 +129,11 @@
                         </ul>
                     </nav>
                     <!-- 導入 -->
-                    <div class="c-detail__introduction blog-detail__introduction"></div>
-                    <p>
-                        本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。
-                    </p>
+                    <div class="c-detail__introduction blog-detail__introduction">
+                        <p>
+                            本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。
+                        </p>
+                    </div>
                     <!-- H2（本文） -->
                     <div class="c-detail__main blog-detail__main">
                         <h2>H2見出しが入ります。H2見出しが入ります。</h2>
