--- a/MusicSchool/_static/src/notice_details.html
+++ b/MusicSchool/_static/src/notice_details.html
@@ -82,9 +82,9 @@
                     <!-- 導入 -->
                     <div class="c-detail__introduction notice-detail__introduction js-fv">
                         <h1>卒業生のケニーさんによるyoutubeサムネイル講座が始まります。</h1>
-                        <p class="c-detail__introduction__date notice-detail__introduction__date">
+                        <div class="c-detail__introduction__date notice-detail__introduction__date">
                             2022.01.01
-                        </p>
+                        </div>
                         <p>
                             本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。
                         </p>
@@ -117,14 +117,12 @@
                     </div>
                     <!-- 前の記事・次の記事 -->
                     <nav class="c-linear-nav notice-detail__linear-nav">
-                        <ul class="c-linear-nav__list">
+                        <ul class="c-linear-nav__list notice-detail__linear-nav__list">
                             <li>
                                 <a href="#" class="c-linear-nav__link-item">
                                     <div class="c-linear-nav__item">
                                         <div class="c-linear-nav__item__label c-linear-nav__prev__label">◀︎ 前の記事</div>
                                         <div class="c-linear-nav__card">
-                                            <img class="c-linear-nav__item__img pc" src="../img/PC/blog/blog01.png"
-                                                srcset="../img/PC/blog/blog01.png 1x, ../img/PC/blog/blog01@2x.png 2"></img>
                                             <div class="c-linear-nav__item__title">タイトルが入ります。タイトルが入ります。タイトルが入</div>
                                         </div>
                                     </div>
@@ -135,8 +133,6 @@
                                     <div class="c-linear-nav__item">
                                         <div class="c-linear-nav__item__label c-linear-nav__next__label">次の記事 ▶︎</div>
                                         <div class="c-linear-nav__card">
-                                            <img class="c-linear-nav__item__img pc" src="../img/PC/blog/blog01.png"
-                                                srcset="../img/PC/blog/blog01.png 1x, ../img/PC/blog/blog01@2x.png 2"></img>
                                             <div class="c-linear-nav__item__title">タイトルが入ります。タイトルが入ります。タイトルが入</div>
                                         </div>
                                     </div>
@@ -159,34 +155,35 @@
                 </section>
             </div>
         </div>
-        <footer id="footer">
-            <div class="main-wrapper footer-wrapper">
-                <nav class="footer__nav">
-                    <ul>
-                        <li><a href="./index.html" class="u-font--white u-font--bold">ホーム</a></li>
-                        <li><a href="./plan.html" class="u-font--white u-font--bold">料金</a></li>
-                        <li><a href="./blog_list.html" class="u-font--white u-font--bold">ブログ</a></li>
-                        <li><a href="./notice_list.html" class="u-font--white u-font--bold">お知らせ</a></li>
-                        <li><a href="./result_list.html" class="u-font--white u-font--bold">卒業実績</a></li>
-                    </ul>
-                </nav>
-                <img src="../img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
-                <small class="copyright u-font--white">
-                    Copyright © 2021 KITAMURA music school Inc. All Rights
-                </small>
-                <nav class="footer__sns__nav">
-                    <ul>
-                        <li><a href="#"><img src="../img/icon/twitter.svg" alt="twitter"></a></li>
-                        <li><a href="#"><img src="../img/icon/facebook.svg" alt="facebook"></a></li>
-                        <li><a href="#"><img src="../img/icon/youtube.svg" alt="youtube"></a></li>
-                        <li><a href="#"><img src="../img/icon/instagram.svg" alt="instagram"></a></li>
-                    </ul>
-                </nav>
-            </div>
-        </footer>
-        <script src="./js/jquery-3.6.0.min.js"></script>
-        <script src="./lib/slick.min.js"></script>
-        <script src="./js/script.js"></script>
+    </div>
+    <footer id="footer">
+        <div class="main-wrapper footer-wrapper">
+            <nav class="footer__nav">
+                <ul>
+                    <li><a href="./index.html" class="u-font--white u-font--bold">ホーム</a></li>
+                    <li><a href="./plan.html" class="u-font--white u-font--bold">料金</a></li>
+                    <li><a href="./blog_list.html" class="u-font--white u-font--bold">ブログ</a></li>
+                    <li><a href="./notice_list.html" class="u-font--white u-font--bold">お知らせ</a></li>
+                    <li><a href="./result_list.html" class="u-font--white u-font--bold">卒業実績</a></li>
+                </ul>
+            </nav>
+            <img src="../img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
+            <small class="copyright u-font--white">
+                Copyright © 2021 KITAMURA music school Inc. All Rights
+            </small>
+            <nav class="footer__sns__nav">
+                <ul>
+                    <li><a href="#"><img src="../img/icon/twitter.svg" alt="twitter"></a></li>
+                    <li><a href="#"><img src="../img/icon/facebook.svg" alt="facebook"></a></li>
+                    <li><a href="#"><img src="../img/icon/youtube.svg" alt="youtube"></a></li>
+                    <li><a href="#"><img src="../img/icon/instagram.svg" alt="instagram"></a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
+    <script src="./js/jquery-3.6.0.min.js"></script>
+    <script src="./lib/slick.min.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
