add contact link

--- a/MusicSchool/_static/src/blog_details.html
+++ b/MusicSchool/_static/src/blog_details.html
@@ -44,7 +44,8 @@
                 <li><a href="./result_list.html" class="nav-item"></a>卒業実績</li>
             </ul>
         </nav>
-        <button class="pc c-button c-button--red c-button--small header__button">
+        <button class="pc c-button c-button--red c-button--small header__button"
+            onclick="location.href='./contact_form.html'">
             お問い合わせ
         </button>
     </header>
@@ -336,13 +337,15 @@
                         <button class="c-button u-mr-100 u-ml-auto js-go-top">
                             <img src="./img/icon/to-top.svg" alt="トップへ戻る">
                         </button>
-                        <button class="c-button--red c-button--mid u-mt-30">お問い合わせ</button>
+                        <button class="c-button--red c-button--mid u-mt-30"
+                            onclick="location.href='./contact_form.html'">お問い合わせ</button>
                     </div>
                     <div class="no-pc u-pos-fixed u-l-50 u-bottom-0 js-fixed-btn-no-pc">
                         <button class="c-button u-ml-auto js-go-top">
                             <img src="./img/icon/to-top.svg" alt="トップへ戻る">
                         </button>
-                        <button class="c-button--red c-button--mid u-mt-19">お問い合わせ</button>
+                        <button class="c-button--red c-button--mid u-mt-19"
+                            onclick="location.href='./contact_form.html'">お問い合わせ</button>
                     </div>
                 </section>
             </div>
