--- a/MusicSchool/_static/src/blog_list.html
+++ b/MusicSchool/_static/src/blog_list.html
@@ -44,7 +44,8 @@
                 <li><a href="./result_list.html" class="nav-item"></a>卒業実績</li>
             </ul>
         </nav>
-        <button class="pc c-button c-button--red c-button--small header__button">
+        <button class="pc c-button c-button--red c-button--small header__button"
+            onclick="location.href='./contact_form.html'">
             お問い合わせ
         </button>
     </header>
@@ -335,7 +336,8 @@
             <button class="c-button u-ml-auto js-go-top">
                 <img src="./img/icon/to-top.svg" alt="トップへ戻る">
             </button>
-            <button class="c-button--red c-button--mid u-mt-19">お問い合わせ</button>
+            <button class="c-button--red c-button--mid u-mt-19"
+                onclick="location.href='./contact_form.html'">お問い合わせ</button>
         </div>
     </section>
     <footer id="footer">
