--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -345,13 +345,15 @@
             <button class="c-button u-mr-100 u-ml-auto js-go-top">
                 <img src="./img/icon/to-top.svg" alt="トップへ戻る">
             </button>
-            <button class="c-button--red c-button--mid u-mt-31">お問い合わせ</button>
+            <button class="c-button--red c-button--mid u-mt-31"
+                onclick="location.href='./contact_form.html'">お問い合わせ</button>
         </div>
         <div class="no-pc u-pos-fixed u-l-50 u-bottom-0 js-fixed-btn-no-pc">
             <button class="c-button u-ml-auto js-go-top">
                 <img src="./img/icon/to-top.svg" alt="トップへ戻る">
             </button>
-            <button class="c-button--red c-button--mid u-mt-19">お問い合わせ</button>
+            <button class="c-button--red c-button--mid u-mt-19"
+                onclick="location.href='./contact_form.html'">お問い合わせ</button>
         </div>
     </section>
     <footer id="footer">
