--- a/MusicSchool/_static/src/blog_list.html
+++ b/MusicSchool/_static/src/blog_list.html
@@ -69,14 +69,16 @@
         </div>
     </section>
     <nav class="c-breadcrumb">
-        <ul>
-            <li>
-                <a href="#">ホーム</a>
-            </li>
-            <li>
-                <a href="#">ブログ</a>
-            </li>
-        </ul>
+        <div class="main-wrapper">
+            <ul>
+                <li>
+                    <a href="#">ホーム</a>
+                </li>
+                <li>
+                    <a href="#">ブログ</a>
+                </li>
+            </ul>
+        </div>
     </nav>
     <section id="blog-list" class="main-wrapper">
         <h1 class="c-sub-page-title">ブログ一覧</h1>
