--- a/MusicSchool/_static/src/blog_list.html
+++ b/MusicSchool/_static/src/blog_list.html
@@ -53,8 +53,8 @@
         <nav class="hamburger-nav">
             <ul class="hamburger-list">
                 <li><a href="./plan.html" class="c-hamburger-item hamburger-trigger">料金</a></li>
-                <li><a href="#blog" class="c-hamburger-item hamburger-trigger">ブログ</a></li>
-                <li><a href="#information" class="c-hamburger-item hamburger-trigger">お知らせ</a></li>
+                <li><a href="./blog_list.html" class="c-hamburger-item hamburger-trigger">ブログ</a></li>
+                <li><a href="./notice_list.html" class="c-hamburger-item hamburger-trigger">お知らせ</a></li>
                 <li><a href="#result" class="c-hamburger-item hamburger-trigger">卒業実績</a></li>
             </ul>
         </nav>
