--- a/MusicSchool/_static/src/contact_send.html
+++ b/MusicSchool/_static/src/contact_send.html
@@ -54,7 +54,7 @@
             <ul class="hamburger-list">
                 <li><a href="./plan.html" class="c-hamburger-item hamburger-trigger">料金</a></li>
                 <li><a href="./blog_list.html" class="c-hamburger-item hamburger-trigger">ブログ</a></li>
-                <li><a href="#information" class="c-hamburger-item hamburger-trigger">お知らせ</a></li>
+                <li><a href="./notice_list.html" class="c-hamburger-item hamburger-trigger">お知らせ</a></li>
                 <li><a href="./result_list.html" class="c-hamburger-item hamburger-trigger">卒業実績</a></li>
             </ul>
         </nav>
