--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -36,10 +36,10 @@
         </div>
         <nav class="c-nav pc header__nav">
             <ul class="c-nav-list">
-                <li><a href="./plan.html" class="nav-item">料金</a></li>
-                <li><a href="./blog_list.html" class="nav-item">ブログ</a></li>
-                <li><a href="#" class="nav-item">お知らせ</a></li>
-                <li><a href="./result_list.html" class="nav-item"></a>卒業実績</li>
+                <li><a href="./plan.html" class="c-nav-itemlink">料金</a></li>
+                <li><a href="./blog_list.html" class="c-nav-itemlink">ブログ</a></li>
+                <li><a href="#" class="c-nav-itemlink">お知らせ</a></li>
+                <li><a href="./result_list.html" class="c-nav-itemlink">卒業実績</a></li>
             </ul>
         </nav>
         <button class="pc c-button c-button--red c-button--small header__button">
