--- a/MusicSchool/_static/src/result_details.html
+++ b/MusicSchool/_static/src/result_details.html
@@ -142,7 +142,7 @@
                                 <div class="c-linear-nav__item">
                                     <div class="c-linear-nav__item__label c-linear-nav__prev__label">◀︎ 前の記事
                                     </div>
-                                    <div class="c-linear-nav__card">
+                                    <div class="c-linear-nav__card result-details__linear-nav__card">
                                         <img class="c-linear-nav__item__img pc" src="../img/PC/top/blog03.png"
                                             srcset="../img/PC/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2"></img>
                                         <div class="c-linear-nav__item__title">タイトルが入ります。タイトルが入ります。タイトルが入</div>
@@ -155,7 +155,7 @@
                                 <div class="c-linear-nav__item">
                                     <div class="c-linear-nav__item__label c-linear-nav__next__label">次の記事 ▶︎
                                     </div>
-                                    <div class="c-linear-nav__card">
+                                    <div class="c-linear-nav__card result-details__linear-nav__card">
                                         <img class="c-linear-nav__item__img pc" src="../img/PC/top/blog03.png"
                                             srcset="../img/PC/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2"></img>
                                         <div class="c-linear-nav__item__title">タイトルが入ります。タイトルが入ります。タイトルが入</div>
@@ -170,12 +170,12 @@
                     <h2 class="c-section__title result_details__rel-article__title">
                         関連記事
                     </h2>
-                    <div class="c-card-list">
+                    <div class="c-card-list result-details__card-list">
                         <div class="c-card result_details__rel-card">
                             <a href="#">
                                 <div class="c-card-flex result_details__card--flex">
                                     <div class="c-card__img-container">
-                                        <div class="c-card__label result_details__card__label">ギター</div>
+                                        <div class="c-card__label result_details__card__label">ロック</div>
                                         <img src="../img/SP/top/voice02.png"
                                             srcset="../img/SP/top/voice02.png 1x, ../img/PC/top/voice02@2x.png 2x"
                                             alt="卒業実績02" class="c-card__img result_details__card__img no-pc">
@@ -195,7 +195,7 @@
                             <a href="#">
                                 <div class="c-card-flex result_details__card--flex">
                                     <div class="c-card__img-container">
-                                        <div class="c-card__label result_details__card__label">ギター</div>
+                                        <div class="c-card__label result_details__card__label">ジャズ</div>
                                         <img src="../img/SP/top/voice03.png"
                                             srcset="../img/SP/top/voice03.png 1x, ../img/PC/top/voice03@2x.png 2x"
                                             alt="卒業実績03" class="c-card__img result_details__card__img no-pc">
@@ -215,7 +215,7 @@
                             <a href="#">
                                 <div class="c-card-flex result_details__card--flex">
                                     <div class="c-card__img-container">
-                                        <div class="c-card__label result_details__card__label">ギター</div>
+                                        <div class="c-card__label result_details__card__label">ラテン</div>
                                         <img src="../img/SP/top/voice04.png"
                                             srcset="../img/SP/top/voice04.png 1x, ../img/PC/top/voice04@2x.png 2x"
                                             alt="卒業実績04" class="c-card__img result_details__card__img no-pc">
