--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -25,12 +25,14 @@
 
 <body>
     <header class="header">
-        <div class="header__logo-title">
-            <img src="./img/icon/logo.svg" alt="logo" class="logo">
-            <p class="site-title">
-                <span class="header__logo-title--text-decoration">きたむら</span>ミュージックスクール
-            </p>
-        </div>
+        <a href="./index.html">
+            <div class="header__logo-title">
+                <img src="./img/icon/logo.svg" alt="logo" class="logo">
+                <p class="site-title">
+                    <span class="header__logo-title--text-decoration">きたむら</span>ミュージックスクール
+                </p>
+            </div>
+        </a>
         <div class="c-hamburger hamburger-trigger no-pc">
             <span></span>
         </div>
