fix index, plan

--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -286,7 +286,7 @@
                     <td class="news__text u-font--white u-font--bold"><a>あけましておめでとうございます。</a></td>
                 </tr>
                 <tr>
-                    <td colspan="2" class="news__forward u-font--white"><a href="#">お知らせ一覧へ</a></td>
+                    <td colspan="2" class="news__forward u-font--white"><a href="./notice_list.html">お知らせ一覧へ</a></td>
                 </tr>
             </table>
         </div>
@@ -341,7 +341,7 @@
                     </a>
                 </div>
             </div>
-            <a href="#" class="blog__forward">ブログ一覧へ</a>
+            <a href="./blog_list.html" class="blog__forward">ブログ一覧へ</a>
         </div>
         <div class="pc u-pos-fixed u-bottom-0 u-right-0 js-fixed-btn-pc">
             <button class="c-button u-mr-100 u-ml-auto js-go-top">
