--- a/MusicSchool/_static/src/plan.html
+++ b/MusicSchool/_static/src/plan.html
@@ -69,14 +69,16 @@
         </div>
     </section>
     <nav class="c-breadcrumb">
-        <ul>
-            <li>
-                <a href="#">ホーム</a>
-            </li>
-            <li>
-                <a href="#">プラン・料金</a>
-            </li>
-        </ul>
+        <div class="main-wrapper">
+            <ul>
+                <li>
+                    <a href="#">ホーム</a>
+                </li>
+                <li>
+                    <a href="#">プラン・料金</a>
+                </li>
+            </ul>
+        </div>
     </nav>
     <section id="fee" class="main-wrapper">
         <h1 class="plan__title">料金体系</h1>
@@ -191,7 +193,8 @@
             <button class="c-button u-mr-100 u-ml-auto js-go-top">
                 <img src="./img/icon/to-top.svg" alt="トップへ戻る">
             </button>
-            <button class="c-button--red c-button--mid" onclick="location.href='./contact_form.html'">お問い合わせ</button>
+            <button class="c-button--red c-button--mid u-mt-31"
+                onclick="location.href='./contact_form.html'">お問い合わせ</button>
         </div>
         <div class="no-pc u-pos-fixed u-l-50 u-bottom-0 js-fixed-btn-no-pc">
             <button class="c-button u-ml-auto js-go-top">
