--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -40,7 +40,7 @@
             <ul class="c-nav-list">
                 <li><a href="./plan.html" class="c-nav-itemlink">料金</a></li>
                 <li><a href="./blog_list.html" class="c-nav-itemlink">ブログ</a></li>
-                <li><a href="#" class="c-nav-itemlink">お知らせ</a></li>
+                <li><a href="./notice_list.html" class="c-nav-itemlink">お知らせ</a></li>
                 <li><a href="./result_list.html" class="c-nav-itemlink">卒業実績</a></li>
             </ul>
         </nav>
