fix blog-list, blog-details, notice-list, notice-details

--- a/MusicSchool/_static/src/blog_details.html
+++ b/MusicSchool/_static/src/blog_details.html
@@ -90,10 +90,10 @@
                                 <div class="c-card__label blog__card__label">ギター</div>
                                 <img src="../img/SP/top/blog01.png"
                                     srcset="../img/SP/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
-                                    class="c-card__img blog__card__img no-pc">
+                                    class="c-card__img blog-detail__main-card__img no-pc">
                                 <img src="../img/PC/top/blog01.png"
                                     srcset="../img/PC/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
-                                    class="c-card__img blog__card__img pc">
+                                    class="c-card__img blog-detail__main-card__img pc">
                             </div>
                             <h1 class="c-card__title blog-detail__main-card__title">アルペジオが劇的に向上する3つの習慣</h1>
                             <p class="c-card__date blog-detail__main-card__date">2022.01.01</p>
@@ -159,7 +159,7 @@
                             <p class="c-detail__quote__text">
                                 本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。</p>
                         </div>
-                        <a href="#" class="c-detail__back-link">テキストリンク</a>
+                        <a href="#" class="c-detail__back-link blog-detail__back-link">テキストリンク</a>
                     </div>
                 </section>
                 <!-- 前の記事・次の記事 -->
