fix result-list, result-details

--- a/MusicSchool/_static/src/result_list.html
+++ b/MusicSchool/_static/src/result_list.html
@@ -149,7 +149,7 @@
                         <div class="c-card__label result-list__card__label">クラシック</div>
                         <img src="../img/SP/top/voice05.png"
                             srcset="../img/SP/top/voice05.png 1x, ../img/PC/top/voice05@2x.png 2x" alt="卒業実績画像05"
-                            class="c-card__img result-list__card__img no-pc">
+                            class="c-card__img result-list__card__img no-pc result-list__card__img__adjust">
                         <img src="../img/PC/top/voice05.png"
                             srcset="../img/PC/top/voice05.png 1x, ../img/PC/top/voice05@2x.png 2x" alt="卒業実績画像05"
                             class="c-card__img result-list__card__img pc">
